# isometric

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .vimrc  CMakeLists.txt  CppTips.md  README.md  run-clang-format.sh
assets/: res.qrc
assets/maps/: entrance.tmx  scifi_platformTiles_32x32.tsx
igd/: Application.cpp  Application.h  ILauncher.h  Launcher.cpp  Launcher.h
igd/application/: Application.cpp  Application.cxx  Application.h  Application.hxx  Environment.cpp  Environment.cxx  Environment.h  Environment.hxx  IApplication.h  IApplication.hxx  IEnvironment.h  IEnvironment.hxx  ILauncher.h  ILauncher.hxx  ILocationManager.hxx  Launcher.cpp  Launcher.cxx  Launcher.h  Launcher.hxx  LocationManager.cxx  LocationManager.hxx
igd/core/: Core.hxx  Geometry.hxx  ToString.hxx
igd/environment/location/: ILocation.hxx  Location.hxx  LocationId.hxx
igd/environment/surface/: ISurfaceMap.h  ISurfaceMap.hxx  ISurfaceSize.hxx  ISurfaceUnit.h  ISurfaceUnit.hxx  SurfaceDescriptor.h  SurfaceDescriptor.hxx  SurfaceMaterial.hxx  SurfaceTable.cpp  SurfaceTable.cxx  SurfaceTable.h  SurfaceTable.hxx  SurfaceUnit.hxx
igd/environment/tiled/: TiledMapParser.cxx  TiledMapParser.hxx
qml/: res.qrc
scripts/: clangformattest.sh  generate-cxx-qml-component.py  run-clang-format.sh
ui/: main.cpp  main.cxx
ui/backend/: Environment.cxx  Environment.hxx  Launcher.cpp  Launcher.cxx  Launcher.h  Launcher.hxx  MainLoopQueue.cxx  MainLoopQueue.hxx  Settings.cxx  Settings.hxx  TypeRegistrator.cpp  TypeRegistrator.cxx  TypeRegistrator.hxx  UiContext.cpp  UiContext.cxx  UiContext.h  UiContext.hxx
ui/backend/core/: Core.hxx
ui/backend/models/: SurfaceModel.cxx  SurfaceModel.hxx
ui/core/: ToString.hxx
ui/core/math/: Geometry.hxx
ui/qml/: Backend.qml  GamePage.qml  GameScreen.qml  GameView.qml  Main.qml  MainMenu.qml  res.qrc
ui/qml/components/: BlurredPopup.qml  Optional.qml  Parallelogram.qml  Triangle.qml
ui/qml/isometry/: SurfaceDelegate.qml  SurfaceView.qml  Tile.qml  Wall.qml
ui/qml/js/: MathUtils.js
ui/qml/runtime/: Parallelogram.cxx  Parallelogram.hxx  Triangle.cxx  Triangle.hxx
ui/qml/styles/debug/: LocationStyle.qml  SurfaceTile.qml  Wall.qml
ui/qml/styles/igd/: SurfaceTile.qml  Wall.qml
